@@ -231,38 +231,13 @@ def setup_i18n_preauth(context):
     """ Determine language for the request in absence of any user info. """
     if i18n.languages is None:
         i18n.i18n_init(context)
-
-    lang = None
-    if i18n.languages:
-        cfg = context.cfg
-        if not cfg.language_ignore_browser:
-            for l, w in context.request.accept_languages:
-                logging.debug("client accepts language %r, weight %r" % (l, w))
-                if l in i18n.languages:
-                    logging.debug("moin supports language %r" % l)
-                    lang = l
-                    break
-            else:
-                logging.debug("moin does not support any language client accepts")
-        if not lang:
-            if cfg.language_default in i18n.languages:
-                lang = cfg.language_default
-                logging.debug("fall back to cfg.language_default (%r)" % lang)
-    if not lang:
-        lang = 'en'
-        logging.debug("emergency fallback to 'en'")
+    lang = i18n.requestLanguage(context)
     logging.debug("setup_i18n_preauth returns %r" % lang)
     return lang
 
 def setup_i18n_postauth(context):
     """ Determine language for the request after user-id is established. """
-    user = context.user
-    if user and user.valid and user.language:
-        logging.debug("valid user that has configured some specific language to use in his user profile")
-        lang = user.language
-    else:
-        logging.debug("either no valid user or no specific language configured in user profile, using lang setup by setup_i18n_preauth")
-        lang = context.lang
+    lang = i18n.userLanguage(context) or context.lang
     logging.debug("setup_i18n_postauth returns %r" % lang)
     return lang
 
